--- a/app/public/style.css
+++ b/app/public/style.css
@@ -1,52 +1,46 @@
 .bg-modal {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.7);
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
 
 .modal-content {
-    width: 500px;
-    height: 300px;
-    background-color: white;
-    border-radius: 4px;
-    justify-content: top;
-    align-items: center;
-    position: relative;
+  width: 500px;
+  height: 400px;
+  background-color: white;
+  border-radius: 4px;
+  align-items: center;
 }
 
 #match-img {
-    width: 40%;
-    height: 40%;
-    margin: 15px;
-    margin-top: 35px;
-    border: 1px solid black;
-    border-radius: 4px;
+  width: 200px;
+  height: 200px;
+  margin-left: 33%;
+  border: 1px solid black;
+  border-radius: 4px;
+  
 }
 
 #match-name {
-    border: 1px solid black;
-    padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 4px;
-    background-color: rgba(0,0,0,0.2);
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 42px;
-    transform: rotate(45deg);
-    cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 42px;
+  transform: rotate(45deg);
+  cursor: pointer;
 }
 
-#match-name {
-    cursor: pointer;
-}
